align project detail margins; fix footer margins

--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -3,12 +3,12 @@
   flex-flow: column wrap;
   justify-content: center;
   align-items: center;
-  margin: 15vh 45px 30px 0;
+  margin: 15vh auto 30px auto;
   padding: 30px 15px;
   max-width: 100vw;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 900px) {
   .footer__container {
     display: flex;
     flex-flow: row wrap;
@@ -30,6 +30,7 @@
 
 .footer__copyright {
   display: block;
+  margin: 0 15px;
 }
 
 .footer__socials__wrapper {
@@ -38,8 +39,13 @@
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: baseline;
-  margin: 0 0 auto 0;
+  margin: auto;
   padding: 0;
+}
+@media only screen and (min-width: 800px) {
+  .footer__socials__wrapper {
+    margin: 0 0 15px 0;
+  }
 }
 
 .footer__socials__item {
